--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,3 +1,4 @@
+<div class="button" [routerLink]="'history'">History</div>
 <div class="calculator">
   <app-calculator-keypad
     (onKeyClicked)="onKeyClicked($event)"
