Added button on operations history.

--- a/src/app/operations-history/operations-history.component.html
+++ b/src/app/operations-history/operations-history.component.html
@@ -1,3 +1,4 @@
+<div class="button" [routerLink]="''">Calculator</div>
 <div class="operations-history">
   <app-calculator-screen [operations]="operations"></app-calculator-screen>
 </div>
